<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--! Labels !-->
    <string name="app_name">CentralUFG</string>
    <string name="label_menu">Menu</string>
    <string name="label_fechar">Fechar</string>
    <string name="label_aguarde">Aguarde</string>

    <!--! Array de opcoes !-->
    <string-array
        name="opcoes_menu">
        <item>Home</item>
        <item>Frase do dia</item>
        <item>Cartão</item>
        <item>Compromissos</item>
        <item>Ouvidoria</item>
    </string-array>

    <!--! Frases !-->
    <string name="hello_world">Esta é a view inicial. Aqui ficarão os itens do mural.\n Escolha uma
    das opções da barra lateral para navegar nas opções.</string>
    <string name="action_settings">Menu de exemplo</string>
    <string name="alerta_opcao_invalida">Opção inválida</string>
    <string name="alerta_server_error">Não foi possível conectar-se ao servidor</string>
    <string name="alerta_no_content">Nenhuma informação para ser visualizada</string>
    <string name="menssage">Abrindo...</string>

    <string name="gcm_app_version">appVersion</string>
    <string name="gcm_sender_id">437002960869</string>
    <string name="property_reg_id">registration_id</string>

    <!--! Compromisso !-->
    <string name="diaDaSemana">Dia da Semana</string>

    <!--! Ouvidoria !-->
    <string name="action_anexar">Selecionar anexo</string>
    <string name="action_anexar_camera">Camera</string>
    <string name="action_anexar_imagem">Anexar imagem</string>
    <string name="action_anexar_arquivo">Anexar arquivo</string>
    <string name="action_enviar">Enviar</string>
    <string name="titulo">Título</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="nome_anexo">Nome do anexo</string>
    <string name="excluir_anexo">x</string>
    <string name="erro_tamanho_maximo_arquivo">Não é possível anexar um arquivo com mais de %s</string>
    <string name="erro_arquivo_nao_existe">Arquivo não existe</string>
    <string name="desc_imagem_anexada">Imagem anexada</string>
    <string name="desc_remover_imagem">Remover imagem anexada</string>
    <string name="desc_arquivo_anexado">Arquivo anexado</string>
    <string name="desc_remover_arquivo">Remover arquivo anexado</string>
</resources>
