<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/ouvidoria_horizontal_margin"
        android:paddingRight="@dimen/ouvidoria_horizontal_margin"
        android:paddingTop="@dimen/ouvidoria_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo" />

        <EditText
            android:id="@+id/ouvidoriaTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <EditText
            android:id="@+id/ouvidoriaData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao" />

        <EditText
            android:id="@+id/ouvidoriaDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <GridView
            android:id="@+id/ouvidoriaGridImagens"
            android:layout_width="fill_parent"
            android:layout_height="223dp"
            android:columnWidth="150dp"
            android:horizontalSpacing="5dp"
            android:numColumns="auto_fit"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />

        <ListView
            android:id="@+id/ouvidoriaListaAnexos"
            android:layout_width="fill_parent"
            android:layout_height="253dp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:focusable="false"
            android:scrollbars="none" />

    </LinearLayout>

</ScrollView>
